{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 28,
  "lineage": "56d35f25-c063-a76e-1d6f-ab1eb6d5aacb",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-23T20:10:24.560-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amadis-gcp/global/firewalls/allow-rdp",
            "log_config": [],
            "name": "allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi",
            "priority": 65534,
            "project": "amadis-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/firewalls/allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.cloudcadi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-02-23T20:10:24.511-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/amadis-gcp/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi",
            "priority": 65534,
            "project": "amadis-gcp",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.cloudcadi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_alloc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.27.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-02-23T20:10:24.511-08:00",
            "id": "projects/amadis-gcp/global/addresses/cloudcadi-private-ip",
            "name": "cloudcadi-private-ip",
            "network": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi",
            "prefix_length": 16,
            "project": "amadis-gcp",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/addresses/cloudcadi-private-ip"
          },
          "dependencies": [
            "module.vpc.google_compute_network.cloudcadi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "cloudcadi_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/amadis-gcp/global/networks/cloudcadi",
            "mtu": 1460,
            "name": "cloudcadi",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "amadis-gcp",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-23T20:10:25.594-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/amadis-gcp/regions/us-central1/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amadis-gcp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/regions/us-central1/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.cloudcadi_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-02-23T20:10:25.642-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/amadis-gcp/regions/us-central1/subnetworks/subnet-2",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "subnet-2",
            "network": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/global/networks/cloudcadi",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "amadis-gcp",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/amadis-gcp/regions/us-central1/subnetworks/subnet-2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.cloudcadi_vpc"
          ]
        }
      ]
    }
  ]
}